kubernetes_OLD/yml/alertmanager.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: alertmanager
  labels:
    app: alertmanager  
spec:
  serviceName: "alertmanager-hs"
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  podManagementPolicy: Parallel  
  selector:
    matchLabels:
      app: alertmanager
  template:
    metadata:
      labels:
        app: alertmanager
      #bez poniższych annotacji nie dziala klaster  
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '9093'
    spec:
      serviceAccountName: alertmanager
      containers:
      - name: alertmanager
        image: prom/alertmanager
        args: [ "--config.file","/etc/alertmanager/alertmanager.yml","--log.level","debug","--cluster.listen-address","$(POD_IP):8001", "--cluster.peer","alertmanager-0.alertmanager-hs.default.svc.cluster.local:8001", "--cluster.peer","alertmanager-1.alertmanager-hs.default.svc.cluster.local:8001", "--cluster.peer","alertmanager-2.alertmanager-hs.default.svc.cluster.local:8001" ]
        ports:
        - name: alertmgr-port
          containerPort: 9093
        - name: alertclust
          containerPort: 8001
        volumeMounts:
        - name: config-volume-alertmanager-yml
          mountPath: /etc/alertmanager/alertmanager.yml
          subPath: alertmanager.yml
      volumes:
        - name: config-volume-alertmanager-yml
          configMap:
            # Provide the name of the ConfigMap containing the files you want
            # to add to the container
            name: alertmanager-config-alertmanager.yml	
          
---
apiVersion: v1
kind: Service
metadata:
  name: alertmanager-cs
  labels:
    app: alertmanager
  #bez poniższych annotacji nie dziala klaster
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/port: '9093'
spec:
  type: NodePort
  ports:
  - name: client
    port: 9093
    targetPort: 9093
  - name: cluster
    port: 8001
    targetPort: 8001
  selector:
    app: alertmanager
---
apiVersion: v1
kind: Service
metadata:
  name: alertmanager-hs
  labels:
    app: alertmanager
spec:
  ports:
  - port: 9093
    name: server
  clusterIP: None
  selector:
    app: alertmanager
---
# An Ingress with 2 hosts and 3 endpoints
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: alertmanager-ingress
spec:
  rules:
  - host: alertmanager
    http:
      paths:
      - path: /
        backend:
          serviceName: alertmanager-hs
          servicePort: 9093
